src/components/AboutSection/AboutSection.module.scss
.aboutSectionContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 4rem;
  max-width: 85rem;
  margin: 5rem auto;
  padding: 1rem 2rem;
}

.mainInfoContainer,
.iconsContainer {
  display: flex;
}

.header {
  font-size: 4.4rem;
}

.subHeader {
  font-size: 2.2rem;
}

.mainInfo,
.contactData {
  width: 50%;

  @media (max-width: 1200px) {
    width: 100%;
  }
}

.mainInfoContainer {
  gap: 8rem;

  @media (max-width: 1200px) {
    flex-direction: column;
  }
}

.mainInfo {
  display: flex;
  flex-direction: column;
  gap: 2rem;

  font-family: "AlegreyaSans", sans-serif;
}

.mainText {
  font-size: 1.3rem;
  line-height: 2rem;
  text-align: justify;
  text-justify: auto;
}

.contactData {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  font-family: "Cabin", sans-serif;
  font-size: 2.3rem;
  color: var(--white);
}

.contactDataContainer {
  width: 100%;
  display: flex;
  align-items: flex-start;
  justify-content: center;
}

.phoneIconContainer,
.emailIconContainer {
  height: 100%;
  width: 20%;
}

.phoneIconContainer,
.emailIconContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}

.phoneIconContainer {
  background-color: var(--accent-color-green);

  svg path {
    fill: var(--white);
  }
}

.emailIconContainer {
  background-color: var(--dark-grey);

  svg path {
    fill: var(--accent-color-green);
  }
}

.iconInnerContainer {
  height: 55%;
  width: 60%;
  border-radius: 50%;
  background-color: var(--black);
  padding: 15px;
  transition: all 0.1s ease-in-out;

  &:hover {
    background-color: transparent;
  }
}

.dataLabel {
  font-size: 1.1rem;
}

.phoneContainer,
.emailContainer {
  min-height: 4rem;
  padding: 2rem 1rem;
  width: 75%;
}

.phoneContainer {
  background-color: var(--accent-color-blue);
}

.emailContainer {
  background-color: var(--dark-grey);
}

.iconsContainer {
  margin-top: 2rem;
  width: 100%;
  justify-content: space-around;
  gap: 2vw;

  div {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    justify-content: center;
  }

  @media (max-width: 600px) {
    flex-direction: column;
    gap: 4rem;
  }
}

.iconContainer {
  position: relative;
  height: 8rem;
  width: 8rem;

  &:hover {
    .icon {
      opacity: 0;
      transform: translateX(50%) rotate(90deg);
    }

    .iconHovered {
      opacity: 1;
      transform: translateX(0) rotate(0);
    }

    & + p {
      color: var(--accent-color-green);
    }
  }
}

.icon,
.iconHovered {
  position: absolute;
  height: 100%;
  width: 100%;
  transition: all 0.2s ease-in-out;
}

.iconHovered {
  transform: translateX(-100%) rotate(-90deg);
  opacity: 0;
}

.iconLabel {
  font-size: 1.5rem;
  transition: all 0.2s ease-in-out;
}

.actionButton {
  padding: 0.7rem 1.7rem;
  font-size: 1.05rem;
  color: var(--white);
  background-color: var(--dark-grey);
  text-transform: uppercase;
  font-weight: 700;
  letter-spacing: 1.5px;
  cursor: pointer;
}

